# pressent

./: Cargo.toml  Makefile  README.md  build.rs  pressent  test.md
frontend/: Cargo.toml  Makefile
frontend/src/: lib.rs
src/: cli.rs  index.html  main.css  main.js  main.rs  request.rs  response.rs  routes.rs  script.js  style.css
