[package]
name = "pressent"
version = "1.1.2"
authors = ["Dawid J. Kubis <dawid.kubis3@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Dawidkubis/pressent/"
description = "serving markdown files as presentations"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
comrak = "0.6.2"
structopt = "0.3.5"
toml = "0.5.5"
anyhow = "1.0.26"
lazy_static = "1.4.0"

[build-dependencies]
anyhow = "1.0.26"

