[package]
name = "frontend"
version = "0.1.0"
authors = ["Dawid J. Kubis <dawid.kubis3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "^0.5.0"
wasm-bindgen = "^0.2.50"
